force-app/main/default/objects/Medical_Facility__c/fields/Adress__c.field-meta.xml
<CustomField>
    <fullName>Adress__c</fullName>
    <description>Street / City / Postal Code</description>
    <label>Adress</label>
    <type>TextArea</type>
</CustomField>