force-app/main/default/objects/Medical_Facility__c/fields/Friday_Open_Hours__c.field-meta.xml
<CustomField>
    <fullName>Friday_Open_Hours__c</fullName>
    <label>Friday Open Hours</label>
    <required>true</required>
    <type>Time</type>
</CustomField>