force-app/main/default/objects/Medical_Facility__c/fields/Monday_Close_Hours__c.field-meta.xml
<CustomField>
    <fullName>Monday_Close_Hours__c</fullName>
    <label>Monday Close Hours</label>
    <required>true</required>
    <type>Time</type>
</CustomField>