force-app/main/default/objects/Medical_Facility__c/fields/Opening_Hours__c.field-meta.xml
<CustomField>
    <fullName>Opening_Hours__c</fullName>
    <description>Mon.
Tue.
Wen.
Thurs.
Fri.
Sat.
Sun.</description>
    <label>Opening Hours</label>
    <type>TextArea</type>
</CustomField>