force-app/main/default/objects/Medical_Facility__c/fields/Saturday__c.field-meta.xml
<CustomField>
    <fullName>Saturday__c</fullName>
    <description>HH:MM-HH:MM</description>
    <inlineHelpText>HH:MM-HH:MM</inlineHelpText>
    <label>Saturday</label>
    <length>11</length>
    <required>true</required>
    <type>Text</type>
</CustomField>