force-app/main/default/objects/Medical_Facility__c/fields/Saturday_Close_Hours__c.field-meta.xml
<CustomField>
    <fullName>Saturday_Close_Hours__c</fullName>
    <label>Saturday Close Hours</label>
    <required>true</required>
    <type>Time</type>
</CustomField>