force-app/main/default/objects/Medical_Facility__c/fields/Saturday_Open_Hours__c.field-meta.xml
<CustomField>
    <fullName>Saturday_Open_Hours__c</fullName>
    <label>Saturday Open Hours</label>
    <required>true</required>
    <type>Time</type>
</CustomField>