force-app/main/default/objects/Medical_Facility__c/fields/Sunday_Open_Hours__c.field-meta.xml
<CustomField>
    <fullName>Sunday_Open_Hours__c</fullName>
    <label>Sunday Open Hours</label>
    <required>true</required>
    <type>Time</type>
</CustomField>