force-app/main/default/objects/Medical_Facility__c/fields/Thursday_Close_Hours__c.field-meta.xml
<CustomField>
    <fullName>Thursday_Close_Hours__c</fullName>
    <label>Thursday Close Hours</label>
    <required>true</required>
    <type>Time</type>
</CustomField>