force-app/main/default/objects/Medical_Facility__c/fields/Thursday_Open_Hours__c.field-meta.xml
<CustomField>
    <fullName>Thursday_Open_Hours__c</fullName>
    <label>Thursday Open Hours</label>
    <required>true</required>
    <type>Time</type>
</CustomField>