force-app/main/default/objects/Medical_Facility__c/fields/Tuesday_Close_Hours__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_Close_Hours__c</fullName>
    <label>Tuesday Close Hours</label>
    <required>true</required>
    <type>Time</type>
</CustomField>