force-app/main/default/objects/Medical_Facility__c/fields/Tuesday_Open_Hours__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_Open_Hours__c</fullName>
    <label>Tuesday Open Hours</label>
    <required>true</required>
    <type>Time</type>
</CustomField>