force-app/main/default/objects/Medical_Facility__c/fields/Wednesday_Close_Hours__c.field-meta.xml
<CustomField>
    <fullName>Wednesday_Close_Hours__c</fullName>
    <label>Wednesday Close Hours</label>
    <required>true</required>
    <type>Time</type>
</CustomField>