force-app/main/default/objects/Medical_Facility__c/fields/zip_code__c.field-meta.xml
<CustomField>
    <fullName>zip_code__c</fullName>
    <description>zip-code</description>
    <label>zip-code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>