force-app/main/default/objects/Medical_Facility__c/validationRules/Open_hours_later_than_close_hours.validationRule-meta.xml
<ValidationRule>
    <fullName>Open_hours_later_than_close_hours</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    Monday_Open_Hours__c &gt;= Monday_Close_Hours__c,
    Tuesday_Open_Hours__c &gt;= Tuesday_Close_Hours__c,
    Wednesday_Open_Hours__c &gt;= Wednesday_Close_Hours__c,
    Thursday_Open_Hours__c &gt;= Thursday_Close_Hours__c,
    Friday_Open_Hours__c &gt;= Friday_Close_Hours__c,
    Saturday_Open_Hours__c &gt;= Saturday_Close_Hours__c,
    Sunday_Open_Hours__c &gt;= Sunday_Close_Hours__c
)</errorConditionFormula>
    <errorMessage>Open/Close hours should be after/before close/open hours.</errorMessage>
</ValidationRule>